--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.19.1",
+    "@unocss/eslint-plugin": "^0.60.3",
     "@unocss/nuxt": "^0.60.3",
     "eslint": "^9.3.0",
     "husky": "^8.0.0",
