--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@antfu/eslint-config": "^2.19.1",
     "@unocss/eslint-plugin": "^0.60.3",
     "@unocss/nuxt": "^0.60.3",
+    "@unocss/reset": "^0.60.3",
+    "@vueuse/core": "^10.10.0",
+    "@vueuse/nuxt": "^10.10.0",
     "eslint": "^9.3.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
